--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -12,7 +12,8 @@
   vertical-align: middle;
   user-select: none;
   border: $btn-border-width solid transparent;
-  @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
+  min-height: 50px;
+  @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, 4px);
   @include transition($btn-transition);
 
   // Share hover and focus styles
@@ -47,6 +48,10 @@
       @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
     }
   }
+
+  &.btn-shadow {
+    box-shadow: 0px 8px 15px rgba($primary, 0.3);
+  }
 }
 
 // Future-proof disabling of clicks on `<a>` elements
@@ -54,7 +59,6 @@ a.btn.disabled,
 fieldset:disabled a.btn {
   pointer-events: none;
 }
-
 
 //
 // Alternate buttons
@@ -71,7 +75,6 @@ fieldset:disabled a.btn {
     @include button-outline-variant($value);
   }
 }
-
 
 //
 // Link buttons
@@ -105,7 +108,6 @@ fieldset:disabled a.btn {
   // No need for an active state here
 }
 
-
 //
 // Button Sizes
 //
@@ -117,7 +119,6 @@ fieldset:disabled a.btn {
 .btn-sm {
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
 }
-
 
 //
 // Block button
@@ -134,9 +135,9 @@ fieldset:disabled a.btn {
 }
 
 // Specificity overrides
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
+input[type='submit'],
+input[type='reset'],
+input[type='button'] {
   &.btn-block {
     width: 100%;
   }
