--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -10,7 +10,7 @@
   word-wrap: break-word;
   background-color: $card-bg;
   background-clip: border-box;
-  border: $card-border-width solid $card-border-color;
+  // border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
 
   > hr {
@@ -92,7 +92,6 @@
   }
 }
 
-
 //
 // Header navs
 //
@@ -135,7 +134,6 @@
   @include border-bottom-radius($card-inner-border-radius);
 }
 
-
 // Card deck
 
 .card-deck {
@@ -162,7 +160,6 @@
     }
   }
 }
-
 
 //
 // Card groups
@@ -247,7 +244,6 @@
     }
   }
 }
-
 
 //
 // Columns
