--- a/src/assets/scss/_breadcrumb.scss
+++ b/src/assets/scss/_breadcrumb.scss
@@ -4,18 +4,21 @@
   padding: $breadcrumb-padding-y $breadcrumb-padding-x;
   margin-bottom: $breadcrumb-margin-bottom;
   list-style: none;
-  background-color: $breadcrumb-bg;
+  // background-color: $breadcrumb-bg;
   @include border-radius($border-radius);
 }
 
 .breadcrumb-item {
+  a {
+    color: $gray-400;
+  }
   // The separator between breadcrumbs (by default, a forward-slash: "/")
   + .breadcrumb-item::before {
     display: inline-block; // Suppress underlining of the separator in modern browsers
     padding-right: $breadcrumb-item-padding;
     padding-left: $breadcrumb-item-padding;
-    color: $breadcrumb-divider-color;
-    content: "#{$breadcrumb-divider}";
+    color: $gray-400;
+    content: '#{$breadcrumb-divider}';
   }
 
   // IE9-11 hack to properly handle hyperlink underlines for breadcrumbs built
@@ -33,6 +36,6 @@
   }
 
   &.active {
-    color: $breadcrumb-active-color;
+    color: $gray-900;
   }
 }
