--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -126,7 +126,7 @@ fieldset:disabled a.btn {
 //
 
 .btn-block {
-  display: block;
+  display: inline-grid;
   width: 100%;
 
   // Vertically space out multiple block buttons
